Java11 (#34)
* Change JDK to 11 and update code to adjust for new JDK features.

* Support java 9 modules either though module-info.java or Automatic-Module-Name.